fix : 코드스멜